--- a/index.html
+++ b/index.html
@@ -5,8 +5,107 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
-</html>
+    <div class="wrapper">
+      <header class="page-header">
+        <h1 class="visually-hidden">Седона</h1>
+        <div class="container">
+          <nav class="page-navigation">
+            <a class="page-header-logo"> <img alt="Логотип Седона" height="71" src=" alt="" width="140"> </a>
+            <ul class="site-navigation">
+              <li> <a class="site-navigation-link" href="info.html">Информация</a> </li>
+              <li> <a class="site-navigation-link" href="foto&video.html">Фото и видео</a> </li>
+              <li> <a class="site-navigation-link" href="map.html">Карта штата</a> </li>
+              <li> <a class="site-navigation-link" href="hotels.html">Гостиницы</a> </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main class="page-content">
+        <section class="promo-first">
+          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+          <img alt="Добро пожаловать в Седону" height="353" src="alt="" width="459"> 
+        </section>
+        <article class="promo">
+          <header class="header-promo">
+            <h2 class="header-title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
+            <p class="title-promo">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          </header>
+          <div class="form-title">
+              <a href="#" class="hotel-button">
+                <h2 class="form-header">Поиск гостиницы в седоне</h2>
+              </a>
+            </div>
+          </section>
+          <section class="form">
+              <fieldset class="form-body">
+                <p>
+                  <label class="form-search-label-from" for="from">Дата заезда: </label>
+                  <input class="form-search-field" id="from" name="date" placeholder="24 апреля 2017" type="text">
+                  <button type="button" class="form-search-calendar">
+                    <span class="visually-hidden">Календарь</span>
+                    <width="5">
+                    </width="5">
+                  </button>
+                </p>
+                <p>
+                  <label class="form-search-label-to" for="to">Дата выезда: </label>
+                  <input class="form-search-field" id="to" name="date" placeholder="4 июля 2017" type="text">
+                  <button type="button" class="form-search-calendar">
+                    <span class="visually-hidden">Календарь</span>
+                    <width="5">
+                    </width="5">
+                  </button>
+                </p>
+                <div class="humans">
+                  <p class="find-item">
+                    <button class="minus-adult" type="button">
+                      <span class="visually-hidden">Убавить</span>
+                      <width="4">
+                      </width="4">
+                    </button>
+                    <button class="plus-adult" type="button">
+                      <span class="visually-hidden">Прибавить</span>
+                      <width="4">
+                      </width="4">
+                    </button>
+                    <label for="adults" class="form-search-number">Взрослые:</label>
+                    <input class="input-number input-adults" name="adult" id="adults" placeholder="2" type="text"> 
+                  </p>
+                  <p class="find-item">
+                    <button class="minus-child" type="button">
+                      <span class="visually-hidden">Убавить</span>
+                      <width="4">
+                      </width="4">
+                    </button>
+                    <button class="plus-child" type="button">
+                      <span class="visually-hidden">Прибавить</span>
+                      <width="4">
+                      </width="4">
+                    </button>
+                    <label for="children" class="form-search-number">Дети:</label>
+                    <input class="input-number input-children" name="child" id="children" placeholder="0" type="text"> 
+                  </p>
+                </div>
+                <button class="search-button" type="submit"> Найти </button>
+              </fieldset>
+            </form>
+            <footer class="page-footer">
+              <div class="footer-container">
+                <b class="footer-hashtag"> #WISITSEDONA </b><br>
+                <b class="footer-hashtag"> ТЕЛ: +7(495)666-02-666 </b>
+                <section class="footer-social">
+                  <h2 class="visually-hidden">Седона в социальных сетях</h2>
+                  <ul class="social-list">
+                    <li class="social-item"> <a class="social-button button-tw" href="#">Твиттер</a> </li>
+                    <li class="social-item"> <a class="social-button button-fb" href="#">Фейсбук</a> </li>
+                    <li class="social-item"> <a class="social-button button-yt" href="#">Ютуб</a> </li>
+                  </ul>
+                </section>
+                <p class="footer-coryright">
+                  <b>WEBSITE BY</b>
+                </p>
+              </div>
+            </footer>
+          </div>
+        </body>
+      </html>
