--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 class="visually-hidden">Седона</h1>
         <div class="container">
           <nav class="page-navigation">
-            <a class="page-header-logo"> <img alt="Логотип Седона" height="71" src=" alt="" width="140"> </a>
+            <a class="page-header-logo"> <img alt="Логотип Седона" height="71" src="" alt="" width="140"> </a>
             <ul class="site-navigation">
               <li> <a class="site-navigation-link" href="info.html">Информация</a> </li>
               <li> <a class="site-navigation-link" href="foto&video.html">Фото и видео</a> </li>
@@ -23,9 +23,9 @@
       <main class="page-content">
         <section class="promo-first">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-          <img alt="Добро пожаловать в Седону" height="353" src="alt="" width="459"> 
+          <img alt="Добро пожаловать в Седону" height="353" src=""alt="" width="459"> 
         </section>
-        <article class="promo">
+        <section class="promo">
           <header class="header-promo">
             <h2 class="header-title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
             <p class="title-promo">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -36,7 +36,7 @@
               </a>
             </div>
           </section>
-          <section class="form">
+          <div class="form">
               <fieldset class="form-body">
                 <p>
                   <label class="form-search-label-from" for="from">Дата заезда: </label>
@@ -47,6 +47,7 @@
                     </width="5">
                   </button>
                 </p>
+              </div>
                 <p>
                   <label class="form-search-label-to" for="to">Дата выезда: </label>
                   <input class="form-search-field" id="to" name="date" placeholder="4 июля 2017" type="text">
