--- a/index.html
+++ b/index.html
@@ -30,6 +30,71 @@
             <h2 class="header-title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
             <p class="title-promo">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </header>
+
+          <section class="content__nav info-nav">
+            <div class="info-nav__block">
+              <div class="info-nav__text">
+                <h2 class="info-nav__title">Настоящий городок</h2>
+                <p class="info-nav__hr">- №1 -</p>
+                <p class="info-nav__desc">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течет своя жизнь</p>
+              </div>
+            </div>
+            <div class="info-nav__photo photo">
+            </div>
+          </section>
+          <section class="content__header info-header">
+            <div class="info-header__housing">
+              <div class="info-header__icon icon__housing">
+              </div>
+              <h3 class="info-header__title">Жилье</h3>
+              <p class="info-header__text">Рекомендуем пожить в&nbsp;настоящем мотеле, все как в&nbsp;кино!</p>
+            </div>
+            <div class="info-header__food">
+              <div class="info-header__icon icon__food">
+              </div>
+              <h3 class="info-header__title">Еда</h3>
+              <p class="info-header__text">Всегда, заказывайте фирменный бургер, Вы&nbsp;не&nbsp;разочаруетесь!</p>
+            </div>
+            <div class="info-header__souvenir">
+              <div class="info-header__icon icon__souvenir">
+              </div>
+              <h3 class="info-header__title">Сувениры</h3>
+              <p class="info-header__text">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+            </div>
+          </section>
+          <section class="content__main info-main">
+            <div class="info-main__photo">
+            </div>
+            <div class="info-main__text">
+              <h2 class="info-main__title">Там есть Мост Дьявола</h2>
+              <p class="info-main__hr">— №2 —</p>
+              <p class="info-main__desc">Да, по&nbsp;нему можно пройтись! Если конечно<br>Вы осмелитесь</p>
+            </div>
+          </section>
+          <section class="content__footer info-footer">
+            <div class="info-footer__S">
+              <h2 class="info-footer__title">Небольшая площадь</h2>
+              <p class="info-footer__hr">— №3 —</p>
+              <p class="info-footer__desc">Все достопримечательности находятся очень близко</p>
+            </div>
+            <div class="info-footer__road">
+              <h2 class="info-footer__title">Красивая дорога</h2>
+              <p class="info-footer__hr">— №4 —</p>
+              <p class="info-footer__desc">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>				
+            </div>
+            <div class="info-footer__tourist">
+              <h2 class="info-footer__title">Мало туристов</h2>
+              <p class="info-footer__hr">— №5 —</p>
+              <p class="info-footer__desc">Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
+            </div>
+          </section>
+          <section class="content__travel travel">
+            <div class="travel__text">
+              <h2 class="travel__title">Заинтересовались?</h2>
+              <p class="travel__desc">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем Вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+            </div>			
+            <div class="travel__search">
+
           <div class="form-title">
               <a href="#" class="hotel-button">
                 <h2 class="form-header">Поиск гостиницы в седоне</h2>
@@ -90,9 +155,12 @@
                 <button class="search-button" type="submit"> Найти </button>
               </fieldset>
             </form>
+
+            <iframe class="map__yandex" src=https://yandex.ru/map-widget/v1/?um=constructor%3A2769fe2568c5f4ca207e22e0b03454e660ceb965dc480294ae621e0ce618c207&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor"> </iframe>
+
             <footer class="page-footer">
               <div class="footer-container">
-                <b class="footer-hashtag"> #WISITSEDONA </b><br>
+                <b class="footer-hashtag"> #VISITSEDONA </b><br>
                 <b class="footer-hashtag"> ТЕЛ: +7(495)666-02-666 </b>
                 <section class="footer-social">
                   <h2 class="visually-hidden">Седона в социальных сетях</h2>
