--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
           <img alt="Добро пожаловать в Седону" height="353" src=""alt="" width="459"> 
         </section>
-        <section class="promo">
+        <class="promo">
           <header class="header-promo">
             <h2 class="header-title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
             <p class="title-promo">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -92,78 +92,59 @@
             <div class="travel__text">
               <h2 class="travel__title">Заинтересовались?</h2>
               <p class="travel__desc">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем Вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-            </div>			
-            <div class="travel__search">
+            </div>
 
           <div class="form-title">
               <a href="#" class="hotel-button">
                 <h2 class="form-header">Поиск гостиницы в седоне</h2>
-              </a>
             </div>
+          </a>
           </section>
           <div class="form">
               <fieldset class="form-body">
                 <p>
                   <label class="form-search-label-from" for="from">Дата заезда: </label>
                   <input class="form-search-field" id="from" name="date" placeholder="24 апреля 2017" type="text">
-                  <button type="button" class="form-search-calendar">
-                    <span class="visually-hidden">Календарь</span>
-                    <width="5">
-                    </width="5">
-                  </button>
+                  <button type="button" class="form-search-calendar">Календарь</button>
                 </p>
               </div>
                 <p>
                   <label class="form-search-label-to" for="to">Дата выезда: </label>
                   <input class="form-search-field" id="to" name="date" placeholder="4 июля 2017" type="text">
-                  <button type="button" class="form-search-calendar">
-                    <span class="visually-hidden">Календарь</span>
-                    <width="5">
-                    </width="5">
-                  </button>
+                  <button type="button" class="form-search-calendar">Календарь</button>
                 </p>
-                <div class="humans">
                   <p class="find-item">
                     <button class="minus-adult" type="button">
                       <span class="visually-hidden">Убавить</span>
-                      <width="4">
-                      </width="4">
                     </button>
                     <button class="plus-adult" type="button">
                       <span class="visually-hidden">Прибавить</span>
-                      <width="4">
-                      </width="4">
                     </button>
+                    <div class="form-search-number">
                     <label for="adults" class="form-search-number">Взрослые:</label>
                     <input class="input-number input-adults" name="adult" id="adults" placeholder="2" type="text"> 
                   </p>
+                </div>
                   <p class="find-item">
                     <button class="minus-child" type="button">
                       <span class="visually-hidden">Убавить</span>
-                      <width="4">
-                      </width="4">
                     </button>
                     <button class="plus-child" type="button">
                       <span class="visually-hidden">Прибавить</span>
-                      <width="4">
-                      </width="4">
                     </button>
                     <label for="children" class="form-search-number">Дети:</label>
                     <input class="input-number input-children" name="child" id="children" placeholder="0" type="text"> 
                   </p>
-                </div>
                 <button class="search-button" type="submit"> Найти </button>
               </fieldset>
-            </form>
-
-            <iframe class="map__yandex" src=https://yandex.ru/map-widget/v1/?um=constructor%3A2769fe2568c5f4ca207e22e0b03454e660ceb965dc480294ae621e0ce618c207&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor"> </iframe>
-
-            <footer class="page-footer">
+              <iframe class="map__yandex" src=https://yandex.ru/map-widget/v1/?um=constructor%3A2769fe2568c5f4ca207e22e0b03454e660ceb965dc480294ae621e0ce618c207&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor"> </iframe>
+            </main>
+              <footer class="page-footer">
               <div class="footer-container">
                 <b class="footer-hashtag"> #VISITSEDONA </b><br>
                 <b class="footer-hashtag"> ТЕЛ: +7(495)666-02-666 </b>
+              </div>
                 <section class="footer-social">
-                  <h2 class="visually-hidden">Седона в социальных сетях</h2>
                   <ul class="social-list">
                     <li class="social-item"> <a class="social-button button-tw" href="#">Твиттер</a> </li>
                     <li class="social-item"> <a class="social-button button-fb" href="#">Фейсбук</a> </li>
@@ -175,6 +156,5 @@
                 </p>
               </div>
             </footer>
-          </div>
         </body>
       </html>
