--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/normalize_min.css">
+    <link rel="stylesheet" href="css/style_min.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic"> 
   </head>
   <body>
     <div class="container">
