--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/normalize_min.css">
+    <link rel="stylesheet" href="css/style_min.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic"> 
   </head>
+
   <body>
     <div class="container">
       <div class="header">
@@ -20,7 +24,7 @@
           </div>
       </header>
         <section class="welcome-block">
-          <img class="welcome-title" src="img/welcome.png" alt="Welcome to gorgeous sedona" width="458" height="352">
+          <img class="welcome-title" src="img/background_photo.jpg" alt="Welcome to gorgeous sedona" width="458" height="352">
           <img class="welcome-block-bottom" src="img/polygon.png" width="1200" height="57" alt="">
         </section>
           <section class="description-main">
@@ -124,7 +128,7 @@
           </section>
               <footer class="page-footer">
               <div class="tag-item">
-                <a href="#"> #VISITSEDONA </a><br>
+                <a> #VISITSEDONA </a><br>
                 <a class="footer-hashtag"> ТЕЛ: +7(495)666-02-666 </a>
               </div>
                 <div class="footer-social">
