--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<html lang="ru">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <title>Главная</title> 
@@ -156,7 +156,7 @@
 			<div class="main-footer__wrapper">
 				<div class="main-footer__tag tag">
           <a class="tag__link elem" href="#">#VisitSedona</a><br>
-          <a class="tag__link elem"> ТЕЛ: +7(495)666-02-666 </a>
+          <a class="tag__link tel"> ТЕЛ: +7(495)666-02-666 </a>
 				</div>
 				<div class="main-footer__social social">	
 					<a class="social__link tw__link" href="#" target="_blank" title="Наша страница в Twitter">
