--- a/catalog.html
+++ b/catalog.html
@@ -246,7 +246,7 @@
 			<div class="main-footer__wrapper-catalog">
 			<div class="main-footer__tag tag">
           <a class="tag__link elem" href="#">#VisitSedona</a>
-          <a class="tag__link elem"> ТЕЛ: +7(495)666-02-666 </a>
+          <a class="tag__link tel"> ТЕЛ: +7(495)666-02-666 </a>
 			</div>
 				<div class="main-footer__social social">	
 					<a class="social__link tw__link" href="#" target="_blank" title="наша страница в Twitter">
