--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header class="header">
 			<div class="header__inner">
 				<nav class="header__nav nav">
-					<a class="nav__logo-link" href="http://127.0.0.1:5500/">
+					<a class="nav__logo-link" href="catalog.html">
 					</a>
 					<ul class="nav__list">
 						<li class="nav__item nav__item-first">
@@ -156,7 +156,7 @@
 			<div class="main-footer__wrapper">
 				<div class="main-footer__tag tag">
           <a class="tag__link elem" href="#">#VisitSedona</a><br>
-          <a class="tag__link tel"> ТЕЛ: +7(495)666-02-666 </a>
+          <a class="tag__link tel"> ТЕЛ: +7(495) 666-02-666 </a>
 				</div>
 				<div class="main-footer__social social">	
 					<a class="social__link tw__link" href="#" target="_blank" title="Наша страница в Twitter">
