--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 							<div class="info__kids kids">
 								<label class="kids__label" for="number-kids">Дети:</label>
 								<div class="kids__button">
-									<a href="#number-kids" class="kids__number-minus" title="Уменьшить" onclick="minusCount(this); return false;">
+									<a href="#number-kids" class="kids__number-minus" title="Уменьшить колличество" onclick="minusCount(this); return false;">
 										<svg class="kids__svg-minus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="1.917" viewBox="0 0 9.917 1.917"><path d="M0 0h9.917v1.917h-9.917z"></path></svg>
 									</a>
 									<input class="kids__label-numbers" type="text" name="people" id="number-kids" value="0">
-									<a href="#number-kids" class="kids__number-plus" title="Увеличить" onclick="plusCount(this); return false;">
+									<a href="#number-kids" class="kids__number-plus" title="Увеличить колличество" onclick="plusCount(this); return false;">
 										<svg class="kids__svg-plus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="9.917" viewBox="0 0 9.917 9.917"><path d="M9.917 4h-4v-4h-1.917v4h-4v1.917h4v4h1.917v-4h4z"></path></svg>
 									</a>
 								</div>
