--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			</div>
 		</header>
 		<main class="content">
+			<h1 class="visually-hidden">Sedona</h1>
 			<div class="header__background-logo logo">
 			</div>
 			<div class="header__wrapper">
@@ -96,62 +97,58 @@
 					<p class="info-footer__desc">Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
 				</div>
 			</section>
-			<section class="content__travel travel">
-				<div class="travel__text">
-					<h2 class="travel__title">Заинтересовались?</h2>
-					<p class="travel__desc">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем Вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-				</div>			
-				<div class="travel__search">
-					<button class="travel__btn btn" type="submit">Поиск гостиницы в Седоне</button>
-				</div>
-				<div class="travel__map map">
-				<article class="travel__hotels elem">
-					<form class="travel__info info" method="post" action="https://echo.htmlacademy.ru">
-						<div class="info__date-in in">
-							<label class="in__label" for="text-in">Дата заезда:</label>
-							<input class="in__label-text" type="text" name="date" id="text-in" placeholder="24 Апреля 2017" value="">
-							<svg class="out__img" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-						</div>
-						<div class="info__date-out out">
-							<label class="out__label" for="text-out">Дата выезда:</label>
-							<input class="out__label-text" type="text" name="date" id="text-out" placeholder="4 Июня 2017">
-							<svg class="in__img" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-						</div>
-						<div class="info__wrapper">
-							<div class="info__older older">
-								<label class="older__label" for="number-older">Взрослые:</label>
-								<div class="older__button">
-									<a href="#number-older" class="older__number-minus" title="Уменьшить колличество" onclick="minusCount(this); return false;">
-										<svg class="older__svg-minus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="1.917" viewBox="0 0 9.917 1.917"><path d="M0 0h9.917v1.917h-9.917z"></path></svg>
-									</a>
-									<input class="older__label-numbers" type="text" name="people" id="number-older" value="2">
-									<a href="#number-older" class="older__number-plus" title="Увеличить колличество" onclick="plusCount(this); return false;">
-										<svg class="older__svg-plus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="9.917" viewBox="0 0 9.917 9.917"><path d="M9.917 4h-4v-4h-1.917v4h-4v1.917h4v4h1.917v-4h4z"></path></svg>
-									</a>
-								</div>
-							</div>
-							<div class="info__kids kids">
-								<label class="kids__label" for="number-kids">Дети:</label>
-								<div class="kids__button">
-									<a href="#number-kids" class="kids__number-minus" title="Уменьшить колличество" onclick="minusCount(this); return false;">
-										<svg class="kids__svg-minus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="1.917" viewBox="0 0 9.917 1.917"><path d="M0 0h9.917v1.917h-9.917z"></path></svg>
-									</a>
-									<input class="kids__label-numbers" type="text" name="people" id="number-kids" value="0">
-									<a href="#number-kids" class="kids__number-plus" title="Увеличить колличество" onclick="plusCount(this); return false;">
-										<svg class="kids__svg-plus" xmlns="http://www.w3.org/2000/svg" width="9.917" height="9.917" viewBox="0 0 9.917 9.917"><path d="M9.917 4h-4v-4h-1.917v4h-4v1.917h4v4h1.917v-4h4z"></path></svg>
-									</a>
-								</div>
-							</div>
-						</div>
-						<div class="info__catalog catalog">
-							<button class="catalog__btn" type="submit">Найти</button>
-						</div>
-					</form>
-				</article> 
-					<iframe class="map__yandex" src="https://yandex.ru/map-widget/v1/?um=constructor%3A2769fe2568c5f4ca207e22e0b03454e660ceb965dc480294ae621e0ce618c207&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor"></iframe>
-				</div>
-			</section>
-		</main>
+
+			<section class="offers">
+                <div class="question">
+                    <h2>Заинтересовались?</h2>
+                    <p>Укажите предполагаемые даты поездки,<br>
+                        мы покажем вам лучшие предложения гостиниц в седоне</p>
+                </div>
+                <button type="button" class="offers-button" aria-label="Поиск гостиницы">Поиск гостиницы в седоне</button>
+                <div class="form-wrap form-show">
+                    <form action="https://echo.htmlacademy.ru" method="post" class="form">
+                        <div class="form-line">
+							<label class="date-check-in" for="date-check-in">Дата заезда:</label>
+							<input type="text" id="date-check-in" name="date-check-in" placeholder="24 апреля 2017"/> 
+							<button class="icon-calendar-button" type="button" aria-label="Выбор даты">
+							  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+								<path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
+							  </svg>
+							</button>  
+						  </div>
+						  <div class="form-line">
+							<label class="date-check-out" for="date-check-out">Дата выезда:</label>
+							<input type="text" id="date-check-out" name="date-check-out" placeholder="4 июля 2017" value=""/> 
+							<button class="icon-calendar-button" type="button" aria-label="Выбор даты">
+							  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+							</button>  
+						  </div>
+						  <div class="form-line-amount adults"> 
+							  <label for="adults">Взрослые:</label>
+							  <button class="btn-minus" type="button" name="adults-minus" value="-" aria-label="Меньше"></button>
+							  <input type="text" id="adults" name="adults" placeholder="2"/>
+							  <button class="btn-plus" type="button" name="adults-plus" value="+" aria-label="Больше"></button>
+						  </div>
+						  <div class="form-line-amount children">
+							  <label for="children">Дети:</label>
+							  <button class="btn-minus" type="button" name="children-minus" value="-" aria-label="Меньше"></button>
+							  <input type="text" id="children" name="children" placeholder="0"/>
+							  <button class="btn-plus" type="button" name="children-plus" value="+" aria-label="Больше"></button>
+						  </div> 
+						  <button class="hotel-search-button-blue" type="submit" value="Найти">Найти</button>    
+						</form>
+					  </div>
+					</section> 
+			  
+			<section class="map">
+                <h2 class="visually-hidden">Карта Седоны</h2>
+                <div class="image-map">
+                    <img src="img/map.png" width="1200" height="593" alt="Карта Седоны">
+                </div>
+                <iframe class="map-link" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180505977!2d-111.83015800001773!3d34.85437338103148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1582623335143!5m2!1sru!2sru" width="1200" height="593" style="border:0;" allowfullscreen=""></iframe>
+            </section>
+        </main>
+		
 		<footer class="main-footer">
 			<div class="main-footer__wrapper">
 				<div class="main-footer__tag tag">
@@ -178,6 +175,6 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javascript" src="js/script.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
