--- a/catalog.html
+++ b/catalog.html
@@ -97,7 +97,7 @@
 	        			<div class="range-toggle range-toggle-min"></div>
 	        			<div class="range-toggle range-toggle-max"></div>
 	      			</div>
-	      			<a class="btn-transparent" href="#">Показать</a>
+	      			<button class="btn-transparent" type="submit">Показать</button>
 	    		</div>
 			</form>
 			<div class="container__nav nav">
