--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="footer-parth">
                 <div class="contacts"> 
                     <span>#VISITSEDONA</span>
-                    <a class="tel" href="tel:+74956660266" aria-label="Номер телефона">Тел: +7(495) 666-02-66</a>
+                    <a class="tel" href="tel:+74956660266" aria-label="Номер">Тел: +7(495) 666-02-66</a>
                 </div>
             </div>
 			<div class="footer-socials">
